<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Agenda!</string>
    <string name="app_name">Agenda</string>
    <string name="no_contactos">Actualmente no existen contactos :(</string>
    <string name="menu_delete">Eliminar contacto</string>
    <string name="contacto_nombre">Nombre</string>
    <string name="contacto_apellidos">Apellidos</string>
    <string name="contacto_telefono">Telefono</string>
    <string name="contacto_email">eMail</string>
    <string name="contacto_pais">País</string>
    <string name="contacto_provincia">Provincia</string>
    <string name="contacto_ciudad">Ciudad</string>
    <string name="contacto_confirm">Confirmar</string>
    <string name="contacto_edit">Editar</string>
    <string name="action_settings">Opciones</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="Insert">Añadir</string>
    <string name="title_activity_ver_contacto">Ver contacto</string>
    <string name="dialog_delete">¿Estas seguro?</string>
    <string name="sure">Sí</string>
    <string name="negative">No</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="dummy_content">AGENDA\nAMBIMETRICS</string>
    <string name="button_registrar">Registrarse</string>
    <string name="button_login">Login</string>
    <string name="button_call">Llamar</string>
    <string name="button_foto">Editar Foto</string>
    <string name="bmp_size_key">BMP_SIZE</string>
    <string name="title_activity_editar_contacto_activity_tablet">EditarContactoActivityTablet</string>
    <string name="hello_world">Hello world!</string>

</resources>