<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ver_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/contacto_nombre"
        android:textSize="26sp" />
 
    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ver_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="60dp"
            android:text="@string/contacto_apellidos"
            android:textSize="24sp"  />

    </LinearLayout>

    <TextView
        android:id="@+id/ver_telefono"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="top"
        android:text="@string/contacto_telefono"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/ver_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:text="@string/contacto_email"
        android:textSize="24sp"
        android:layout_marginLeft="60dp" />
    
    <Button
        android:id="@+id/ver_edit_button"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickEdit"
        android:text="@string/contacto_edit" >

    </Button>

</LinearLayout> 